--- a/ud845-Pets-starting-point/ud845-Pets-starting-point/app/src/main/res/values/strings.xml
+++ b/ud845-Pets-starting-point/ud845-Pets-starting-point/app/src/main/res/values/strings.xml
@@ -84,4 +84,6 @@
     <string name="delete">Delete</string>
 
     <string name="cancel">Cancel</string>
+
+    <string name="unknown_breed">Unknown breed</string>
 </resources>
